# modern3dgfx-examples-rs

./: .gitignore  .gitmodules  Cargo.toml  makefile  readme.md
src/: main.rs  mesh.rs  shaders.rs  util.rs
